# vim-magi

./: README.md
autoload/: magi.vim
autoload/magi/: config.json.template  config.yml.template
magi/: pyproject.toml
plugin/: magi.vim
syntax/: magi.vim
